--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -4,6 +4,19 @@
  
 @layer base {
   :root {
+    /* Neutral */
+    --neutral-50: 0 0% 98%;
+    --neutral-100: 0 0% 96.1%;
+    --neutral-200: 0 0% 89.8%;
+    --neutral-300: 0 0% 83.1%;
+    --neutral-400: 0 0% 63.9%;
+    --neutral-500: 0 0% 45.1%;
+    --neutral-600: 0 0% 32.2%;
+    --neutral-700: 0 0% 25.1%;
+    --neutral-800: 0 0% 14.9%;
+    --neutral-900: 0 0% 9%;
+    --neutral-950: 0 0% 3.9%;
+  
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
  
@@ -24,6 +37,9 @@
  
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
+
+    --tertiary: 207 92% 41%;
+    --tertiary-foreground: 0 0% 9%;
  
     --accent: 0 0% 96.1%;
     --accent-foreground: 0 0% 9%;
@@ -52,7 +68,7 @@
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
  
-    --primary: 0 0% 98%;
+    --primary: 72 100% 50%;
     --primary-foreground: 0 0% 9%;
  
     --secondary: 0 0% 14.9%;
